Update About Us

--- a/about.html
+++ b/about.html
@@ -17,7 +17,11 @@
 </head>
 
 <body>
-
+    <!-- JQUERY LINK -->
+    <Script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></Script>
+    <!--ANIME JS LINK -->
+    <script src="https://cdnjs.cloudflare.com/ajax.libs/animejs/3.2.1/anime.min.js"></script>
+    <script src="main.js"></script>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
@@ -47,12 +51,12 @@
     <section class="container my-5">
         <div class="row">
             <div class="col-lg-6">
-                <h1 class="mb-4">About Us</h1>
-                <p>MakMur Sehat adalah sebuah platform yang bertujuan untuk membantu masyarakat mencapai gaya hidup yang lebih sehat dan seimbang melalui informasi yang terpercaya dan inspiratif. Kami hadir sebagai sumber daya yang kaya akan pengetahuan seputar kesehatan, dengan fokus utama pada resep makanan sehat, tips menjaga pola hidup sehat, hingga panduan untuk mengelola kesejahteraan fisik dan mental.</p>
-                <p>Kami memahami bahwa dalam kehidupan yang sibuk dan penuh dengan tantangan, menjaga kesehatan sering kali terlupakan. Oleh karena itu, MakMur Sehat berkomitmen untuk memberikan solusi praktis yang dapat diterapkan dalam kehidupan sehari-hari. Kami percaya bahwa setiap individu berhak untuk mendapatkan akses terhadap informasi kesehatan yang mudah dipahami, sehingga semua orang bisa mulai memperbaiki kualitas hidupnya tanpa harus merasa kewalahan.</p>
-                <p>Di MakMur Sehat, kami bekerja sama dengan tim profesional yang terdiri dari ahli gizi, chef berpengalaman, serta praktisi kesehatan yang memiliki dedikasi tinggi dalam bidangnya masing-masing. Kami terus berusaha untuk menghadirkan konten yang up-to-date dan berbasis penelitian, sehingga Anda bisa yakin bahwa setiap informasi yang kami bagikan adalah yang terbaik untuk kesehatan Anda.</p>
-                <p>Selain itu, kami juga memfasilitasi komunitas yang aktif dan peduli akan kesehatan, di mana para pengguna dapat berbagi pengalaman, tantangan, dan kemajuan mereka dalam menjalani hidup sehat. Kami percaya bahwa kesehatan adalah kekayaan yang sesungguhnya, dan misi kami adalah untuk memberdayakan Anda dalam meraih kesehatan yang optimal dan kebahagiaan dalam hidup Anda sehari-hari.</p>
-            </div>
+                <h3 class="mb-4 text-animate">About Us</h3>
+                <p class="text-animate">MakMur Sehat adalah sebuah platform yang bertujuan untuk membantu masyarakat mencapai gaya hidup yang lebih sehat dan seimbang melalui informasi yang terpercaya dan inspiratif. Kami hadir sebagai sumber daya yang kaya akan pengetahuan seputar kesehatan, dengan fokus utama pada resep makanan sehat, tips menjaga pola hidup sehat, hingga panduan untuk mengelola kesejahteraan fisik dan mental.</p>
+                <p class="text-animate">Kami memahami bahwa dalam kehidupan yang sibuk dan penuh dengan tantangan, menjaga kesehatan sering kali terlupakan. Oleh karena itu, MakMur Sehat berkomitmen untuk memberikan solusi praktis yang dapat diterapkan dalam kehidupan sehari-hari. Kami percaya bahwa setiap individu berhak untuk mendapatkan akses terhadap informasi kesehatan yang mudah dipahami, sehingga semua orang bisa mulai memperbaiki kualitas hidupnya tanpa harus merasa kewalahan.</p>
+                <p class="text-animate">Di MakMur Sehat, kami bekerja sama dengan tim profesional yang terdiri dari ahli gizi, chef berpengalaman, serta praktisi kesehatan yang memiliki dedikasi tinggi dalam bidangnya masing-masing. Kami terus berusaha untuk menghadirkan konten yang up-to-date dan berbasis penelitian, sehingga Anda bisa yakin bahwa setiap informasi yang kami bagikan adalah yang terbaik untuk kesehatan Anda.</p>
+                <p class="text-animate">Selain itu, kami juga memfasilitasi komunitas yang aktif dan peduli akan kesehatan, di mana para pengguna dapat berbagi pengalaman, tantangan, dan kemajuan mereka dalam menjalani hidup sehat. Kami percaya bahwa kesehatan adalah kekayaan yang sesungguhnya, dan misi kami adalah untuk memberdayakan Anda dalam meraih kesehatan yang optimal dan kebahagiaan dalam hidup Anda sehari-hari.</p>
+            </div>            
             <div class="col-lg-6">
                 <img src="assets/slide5.jpg" class="img-fluid large-image" alt="Healthy lifestyle image">
             </div>
@@ -64,21 +68,21 @@
     <!-- Team Section -->
     <section class="bg-light py-5">
         <div class="container">
-            <h2 class="text-center mb-4">Meet Our Team</h2>
+            <h2 class="text-center mb-4">KELOMPOK 11</h2>
             <div class="row text-center">
                 <div class="col-md-4">
                     <img src="assets/Miguel.jpg" class="rounded-circle mb-3" alt="Miguel" width="150">
-                    <h5>Miguel</h5>
+                    <h5>Miguel Valentino</h5>
                     <p>Ketua Kelompok</p>
                 </div>
                 <div class="col-md-4">
                     <img src="assets/Andreas.jpg" class="rounded-circle mb-3" alt="Andreas" width="150">
-                    <h5>Andreas</h5>
+                    <h5>Andreas Setiawan Harefa</h5>
                     <p>Anggota</p>
                 </div>
                 <div class="col-md-4">
                     <img src="assets/James.JPG" class="rounded-circle mb-3" alt="James" width="150">
-                    <h5>James</h5>
+                    <h5>James Nursalim</h5>
                     <p>Anggota</p>
                 </div>
             </div>
