--- a/resep5.html
+++ b/resep5.html
@@ -50,7 +50,7 @@
                 </div>
     
                 <div class="main">
-                    <h2><img width="50%" src="assets/tahuteriyaki.png" alt=""></h2>
+                    <h2><img width="50%" src="assets/capcaybakso.jpeg" alt=""></h2>
                     <p>CapCay Baso adalah hidangan yang lezat dan mudah disiapkan. Dengan campuran berbagai sayuran dan baso, makanan ini cocok untuk disajikan sebagai hidangan sehat yang kaya akan serat dan protein. CapCay juga sangat fleksibel karena bisa disesuaikan dengan sayuran favorit Anda. Resep ini menggunakan bahan-bahan yang terjangkau dan mudah ditemukan.</p>
                     <table>
                       <thead>
