--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <img src="assets/slide1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Semua Resep</h5>
-                <p class="card-text">Liat semua resep kami yang berkualitas dan sehat serta murah. Cocok untuk Mahasiswa!</p>
+                <p class="card-text">Liat semua resep kami yang berkualitas dan sehat serta murah.</p>
                 <a href="resep.html" class="btn btn-primary">Lebih Lanjut</a>
               </div>
             </div>
